tdf#105545 Allow closed paths having 2 points

Closed paths with 2 points can be created from scratch,
therefore allow them too, if a point is deleted.
Remove now unused member mbIsClosed

Change-Id: Iac2a08df52f734c99c6ac14d9f1a16d8b943d399